# Demo

./: .projections.json  Dockerfile  README.md  buildspec.yml  ecs_cluster.cf.yaml  jupyter_server_config.json  pyproject.toml  task-definition.json
.aws/: task-definition.json
.aws/cloudformation-templates/: cluster_cf.yaml  ecr_repository_cf.yaml  setup.cf.yaml  setup.yaml
.github/workflows/: aws_demo.yml  deploy-aws-cf-infrastructure.yml  infrastructure_dev.yml  poetry_install.yml
demo/: prueba.py
demo/features/: calculadora.py  calculator.py
test/features/: calculadora_test.py  calculator_test.py
