[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Monica Nataly <nata.moonk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^5.5"
ipython = "^7.22.0"
jupyterlab = "^3.0.14"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
